--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer partial: loaded via fetch('/components/footer.html') -->
 <footer class="site-footer">
   <div class="container footer-inner">
-    <p>© 2025 My Off-White Blog. All rights reserved.</p>
+    <p>© 2025 Muhammad Mahdi. All rights reserved.</p>
   </div>
 </footer>
