welcome about added and layout fixed

--- a/layouts/pages/contact.html
+++ b/layouts/pages/contact.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="container main single-post">
+<main class="container main contact">
   <article>
     <h1>{{ .Title }}</h1>
     <div class="content">
