--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,8 @@ html,body{margin:0;padding:0;font-family:system-ui, -apple-system, 'Segoe UI', R
 /* Welcome Section */
 .welcome-section {
   background-color: #faf7f0;
-  padding: 60px 20px;
+  margin: 15px auto;
+  padding: 2px 10px 40px 10px;
   text-align: center;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
